<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboarding3"
    android:layout_marginHorizontal="20dp"
    android:layout_marginBottom="20dp">


    <LinearLayout
        android:layout_marginTop="45dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:letterSpacing="0.1"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_medium"
            android:textSize="22dp"
            />

        <ImageView
            android:layout_width="329dp"
            android:layout_height="180dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_onboardingpic3"
            android:layout_marginTop="34dp"
            android:layout_marginBottom="45dp"/>

        <TextView
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_light"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/An_application_made_for_you"/>

        <TextView
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_light"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/so_that_you_can_have_your_food_your_way"
            android:layout_marginBottom="33dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_marginBottom="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_onboardingic1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="25dp"
                    android:text="@string/Search_for_favorite_mess"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_onboardingic2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="25dp"
                    android:text="@string/Select_food_from_daily_menu"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_onboardingic3"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_marginLeft="25dp"
                    android:text="@string/Confirm_your_meal_online"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>







    </LinearLayout>


    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_onboardingscroll3"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            />

        <Button
            android:id="@+id/onboardingNext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/green_button"
            android:text="Done"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto"/>


    </LinearLayout>





</RelativeLayout>