<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboarding2"
    android:layout_marginHorizontal="20dp"
    android:layout_marginBottom="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_width="342dp"
            android:layout_height="250dp"
            android:src="@drawable/ic_onboarding2pic"
            android:layout_marginBottom="75dp"/>
        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dont_know_menu"
            android:layout_marginBottom="20dp"
            android:textSize="22dp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_medium"/>
        <TextView
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_light"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dont_worry_on_lunchbox_mess_menu"/>

        <TextView
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_light"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_updated_every_day"/>

    </LinearLayout>


    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_onboardingscroll2"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            />

        <Button
            android:id="@+id/onboardingNext"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/green_button"
            android:text="Next"
            android:textAllCaps="false"
            android:fontFamily="@font/roboto"/>


    </LinearLayout>




</RelativeLayout>