<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessOwnerSignIn">


    <LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/Welcome"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_light"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:text="@string/please_enter_credentials_to_login"
        android:textColor="@color/black" />
    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/ic_cooking_mess_signin"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"/>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/Enter_your_phone_number"
        app:startIconDrawable="@drawable/ic_baseline_phone_24"
        app:prefixText="+91 "
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_MessMob"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/Password"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:inputType="textWebPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_Messpwd"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_MessLogin"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/Login"
        android:textAllCaps="false"
        android:background="@drawable/green_button"
        android:fontFamily="@font/roboto_medium"/>

    <TextView
        android:onClick="onForgotPassword"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="32dp"
        android:textSize="12sp"
        android:text="@string/Forgot_Password"
        android:textColor="@color/black" />

<!--        <LinearLayout-->
<!--            android:id="@+id/linear_signUp"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            android:layout_gravity="center_horizontal">-->

<!--            <TextView-->

<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:fontFamily="@font/roboto"-->
<!--                android:layout_marginTop="5dp"-->
<!--                android:textSize="12sp"-->
<!--                android:text="@string/Dont_Have_Account_Sign_Up"-->
<!--                android:textColor="@color/black" />-->


<!--        </LinearLayout>-->










    </LinearLayout>


</RelativeLayout>









<!--<LinearLayout-->
<!--android:layout_width="match_parent"-->
<!--android:layout_height="match_parent"-->
<!--android:orientation="vertical">-->

<!--<TextView-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_margin="20dp"-->
<!--    android:text="Mess Owner Login"-->
<!--    android:textSize="30sp"-->
<!--    android:textStyle="bold" />-->

<!--<TextView-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_marginLeft="20dp"-->
<!--    android:text="Please enter "-->
<!--    android:textSize="25sp" />-->

<!--<TextView-->
<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:layout_marginLeft="20dp"-->
<!--    android:text="Your credentials to login"-->
<!--    android:textSize="25sp" />-->

<!--<com.google.android.material.textfield.TextInputLayout-->
<!--    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="65dp"-->
<!--    android:layout_marginLeft="20dp"-->
<!--    android:layout_marginTop="20dp"-->
<!--    android:layout_marginRight="20dp"-->
<!--    android:layout_marginBottom="15dp"-->
<!--    android:hint="Enter phone no."-->
<!--    app:endIconMode="clear_text"-->
<!--    >-->
<!--    <com.google.android.material.textfield.TextInputEditText-->
<!--        android:layout_width="match_parent"-->
<!--        android:id="@+id/et_MessMob"-->
<!--        android:layout_height="match_parent" />-->

<!--</com.google.android.material.textfield.TextInputLayout>-->

<!--<com.google.android.material.textfield.TextInputLayout-->
<!--    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="60dp"-->
<!--    android:layout_marginLeft="20dp"-->
<!--    android:layout_marginRight="20dp"-->
<!--    android:layout_marginBottom="15dp"-->
<!--    android:hint="Enter your password"-->
<!--    app:boxStrokeColor="@color/white"-->
<!--    app:hintTextColor="@color/white"-->
<!--    app:passwordToggleEnabled="true">-->

<!--    <com.google.android.material.textfield.TextInputEditText-->
<!--        android:layout_width="match_parent"-->
<!--        android:id="@+id/et_Messpwd"-->
<!--        android:layout_height="match_parent"-->
<!--        android:inputType="textWebPassword"-->
<!--        android:textColorHint="@color/white" />-->
<!--</com.google.android.material.textfield.TextInputLayout>-->

<!--<TextView-->

<!--    android:layout_width="wrap_content"-->
<!--    android:layout_height="wrap_content"-->
<!--    android:onClick="onForgotPassword"-->
<!--    android:layout_marginLeft="20dp"-->
<!--    android:text="Forget Password ?"-->
<!--    android:textSize="16sp" />-->
<!--</LinearLayout>-->


<!--<TextView-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:layout_alignParentBottom="true"-->
<!--android:layout_marginLeft="20dp"-->
<!--android:onClick="onCancel"-->
<!--android:layout_marginBottom="30dp"-->
<!--android:text="cancel" />-->

<!--<ImageButton-->
<!--android:id="@+id/btn_MessLogin"-->
<!--android:layout_width="50dp"-->
<!--android:layout_height="50dp"-->
<!--android:layout_alignParentRight="true"-->
<!--android:layout_alignParentBottom="true"-->
<!--android:layout_margin="20dp"-->
<!--android:background="@drawable/circle_button_next"-->
<!--android:src="@drawable/ic_chevron_right" />-->